crates/cadenza-compiler/test-data/semantics/variables-error-undefined-variable.expected
error: undefined variable: `undefined_variable`
 --> test.cdz:1:1
  |
1 | undefined_variable
  | ^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = help: use `let undefined_variable = ...` to define it